Fix card overlapping

--- a/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
+++ b/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
@@ -249,6 +249,14 @@ a {
   display: inline-block;
 }
 
+#search-reasults, .search-result {
+  z-index: 9;
+}
+
+.card .card-reveal {
+  z-index: 1;
+}
+
 #search-reasults > .search-result > a {
   display: flex;
   line-height: 22px;
